--- a/static/main.css
+++ b/static/main.css
@@ -1,8 +1,8 @@
 body {
-        background-color: yellow;
+    background-color: yellow;
   }
 
 h1 {
-        color: white
+    color: white;
    
 }
