--- a/templates/index.html
+++ b/templates/index.html
@@ -3,20 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>To Do list</title>
+    
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 
   <!--Style muss immer in der Head-Section sein-->
  
-    <style type="text/css"></style>
-        
-  
   </head>
   
   <body>
     <div class="container">
-      <h1 class="text-center display-1">WHAT'S ON YOUR MIND?</h1>
-      <p class="lead text-center"> Welcome to my ToDo List Application, where u can free your mind. :)</p>
+      <h1 class="text-center display-1"> WHAT'S ON YOUR MIND?</h1>
+      <p class="lead text-center"> Welcome to my To Do List Application, where u can free your mind. :)</p>
       <div class="row">
   <!--mx-auto zentriert die Einfüge-Box-->
           <form class="col-8 mx-auto">
