Hintergrund abdunkeln mit div class "hero"

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,23 +13,28 @@
   </head>
   
   <body>
-    <div class="container">
-      <h1 class="text-center display-1"> WHAT'S ON YOUR MIND?</h1>
-      <p class="lead text-center"> Welcome to my To Do List Application, where u can free your mind. :)</p>
-      <div class="row">
-  <!--mx-auto zentriert die Einfüge-Box-->
-          <form class="col-8 mx-auto">
-              <div class="input-group">
-  <!--Input-group = Button kommt rechts neben Einfüge-Box-->
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="What to do?"> 
-                <span><button type="submit" class="btn btn-primary">Submit</button></span>
-  <!--Span (Inline-Element) hilft mir, um Elemente für Stylingzwecke zu gruppieren-->
-              </div>
-              
-            </form>
+<!-- div class="hero" macht einen Filter über das Hintergrundbild. So wirkt es etwas abgedunkelt.-->
+    <div class="hero">
+        <div class="container">
+            <h1 class="text-center display-1"> WHAT'S ON YOUR MIND?</h1>
+            <p class="lead text-center"> Welcome to my To Do List Application, where u can free your mind. :)</p>
+            <div class="row">
+        <!--mx-auto zentriert die Einfüge-Box-->
+                <form class="col-8 mx-auto">
+                    <div class="input-group">
+        <!--Input-group = Button kommt rechts neben Einfüge-Box-->
+                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="What to do?"> 
+                      <span><button type="submit" class="btn btn-primary">Submit</button></span>
+        <!--Span (Inline-Element) hilft mir, um Elemente für Stylingzwecke zu gruppieren-->
+                    </div>
+                    
+                  </form>
+      
+            </div>
+          </div>
 
-      </div>
     </div>
+
      
    
   </body>
