--- a/static/main.css
+++ b/static/main.css
@@ -7,6 +7,15 @@ body {
     font-size: 1.5rem;
   }
 
+.hero {
+    background-color: rgba(3,3,3, 0.5);
+    min-height: 100vh;
+    min-width: 100vw;
+    top: 0;
+    bottom: 100;
+    position: absolute;
+  }
+
 h1 {
     color: white;
     margin-top: 13rem;
