--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
   </head>
   
   <body>
-<!-- div class="hero" macht einen Filter über das Hintergrundbild. So wirkt es etwas abgedunkelt.-->
+<!-- div class="hero" macht einen (transparenten) Filter über das Hintergrundbild. So wirkt es etwas abgedunkelt.-->
     <div class="hero">
         <div class="container">
             <h1 class="text-center display-1"> WHAT'S ON YOUR MIND?</h1>
@@ -30,6 +30,13 @@
                     
                   </form>
       
+            </div>
+            <div class="row">
+              <ul class="col-8 mx-auto">
+                   <li>To Do List Item <input type="checkbox" aria-label="Checkbox for following text input"> </li>
+                   <li>To Do List Item <input type="checkbox" aria-label="Checkbox for following text input"> </li>
+                   <li>To Do List Item <input type="checkbox" aria-label="Checkbox for following text input"> </li>
+              </ul> 
             </div>
           </div>
 
