schreiben und lesen in json

--- a/templates/done_todos.html
+++ b/templates/done_todos.html
@@ -33,7 +33,7 @@
             </div>
             <div class="row">
               <ul class="col-8 mx-auto">
-                {% for todo in open_todos %}
+                {% for todo in done_todos %}
                    <li>{{ todo }} <input type="checkbox" aria-label="Checkbox for following text input"> </li>
                 {% endfor %}
               </ul> 
