Fehlermeldung wenn todo mit gleichem Namen

--- a/templates/done_todos.html
+++ b/templates/done_todos.html
@@ -14,10 +14,10 @@
   
   <body>
 <!-- div class="hero" macht einen (transparenten) Filter über das Hintergrundbild. So wirkt es etwas abgedunkelt.-->
-    <div class="hero">
+    <div class="hero" style="overflow-y: scroll !important">
         <div class="container">
-            <h1 class="text-center display-1"> WHAT'S ON YOUR MIND?</h1>
-            <p class="lead text-center"> Welcome to my To Do List Application, where u can free your mind. :)</p>
+            <h1 class="text-center display-1">DONE TODOS</h1>
+            <p class="lead text-center"> These are all your done ToDos</p>
             <div class="row">
         <!--mx-auto zentriert die Einfüge-Box-->
                 <form class="col-8 mx-auto">
