--- a/templates/index.html
+++ b/templates/index.html
@@ -13,11 +13,21 @@
   
   <body>
 <!-- div class="hero" macht einen (transparenten) Filter über das Hintergrundbild. So wirkt es etwas abgedunkelt.-->
-    <div class="hero" style="overflow-y: scroll !important">
+    <div class="hero">
         <div class="container">
-            <h1 class="text-center display-1"> WHAT'S ON YOUR MIND?</h1>
-            <p class="lead text-center"> Welcome to my To Do List Application, where u can free your mind. :)</p>
-            <div class="row">
+          <br />
+          <div class="row">
+            <div class="col-8 mx-auto">
+              <div class="row">
+                <div class="col-4 mx-auto"><a class="navlink active" href="{{ url_for('home') }}">OPEN</a></div>
+                <div class="col-4"><a class="navlink" href="{{ url_for('done_todos') }}">DONE</a></div>
+              </div>
+            </div>
+          </div>
+
+          <h1 class="text-center display-1"> WHAT'S ON YOUR MIND?</h1>
+          <p class="lead text-center"> Welcome to my To Do List Application, where u can free your mind. :)</p>
+          <div class="row">
         <!--mx-auto zentriert die Einfüge-Box-->
                 <form class="col-8 mx-auto" method="post">
                     <div class="input-group">
