--- a/static/main.css
+++ b/static/main.css
@@ -7,14 +7,6 @@ body {
     font-size: 1.5rem;
   }
 
-  a.navlink {
-    font-size: 40px;
-    color: white;
-  }
-  a.navlink.active {
-    text-decoration: underline;
-  }
-
 .hero {
     background-color: rgba(3,3,3, 0.5);
     min-height: 100vh;
@@ -66,4 +58,18 @@ input[type=checkbox] {
 
 .lead {
     font-size: 2rem; 
+}
+
+a.navlink {
+  font-size: 40px;
+  color: white;
+}
+a.navlink.active {
+  text-decoration: underline;
+}
+
+.error_message {
+  background-color: rebeccapurple;
+  color: lightgrey;
+  padding: 0 10px 0 10px;
 }
