--- a/templates/done_todos.html
+++ b/templates/done_todos.html
@@ -40,7 +40,7 @@
             </div>
           {% else %}
             <div class="row">
-              <div class="mx-auto error_message" style="background-color: rebeccapurple; color: lightgrey; padding: 0 10px 0 10px;">
+              <div class="mx-auto error_message">
                 No done ToDos
               </div>
             </div>
