--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
             </div>
 
             <div class="row">
-              <div class="mx-auto error_message" style="background-color: rebeccapurple; color: lightgrey; padding: 0 10px 0 10px;">
+              <div class="mx-auto error_message">
                 {% if error != None %}
                   {{ error }}
                 {% endif %}
@@ -58,7 +58,7 @@
             {% else %}
               <br />
               <div class="row">
-                <div class="mx-auto error_message" style="background-color: rebeccapurple; color: lightgrey; padding: 0 10px 0 10px;">
+                <div class="mx-auto error_message">
                   No open ToDos
                 </div>
               </div>
